--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".MangadetailsActivity"
+            android:parentActivityName=".MapsActivity"></activity>
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
