--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:7.2.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.github.GrenderG:Toasty:1.4.1'
+    implementation 'com.google.android.libraries.places:places:1.0.0'
 }
