--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.github.GrenderG:Toasty:1.4.1'
     implementation 'com.google.android.libraries.places:places:1.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
