Add remove manga
- add part my manga
- migrate to androidX

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,11 @@
     package="com.android.shopmanga">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!-- PARTIE QUI CONCERNE LE TELEPHONE -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- PARTIE QUI CONCERNE LE TELEPHONE -->
     <!-- Force cette application a n'etre accessible que pour les appareils disposant d'un telephone -->
     <uses-feature
         android:name="android.hardware.telephony"
-        android:required="true" />
-    <!-- Pour faire la demande d'autorisation de consulter l'etat du telephone -->
+        android:required="true" /> <!-- Pour faire la demande d'autorisation de consulter l'etat du telephone -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
@@ -20,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".List_MangaActivity"></activity>
+        <activity android:name=".myMangaDetailsActivity"></activity>
+        <activity android:name=".List_MangaActivity" />
         <activity
             android:name=".MangadetailsActivity"
             android:parentActivityName=".MapsActivity" />
